B-F Sandbox Full-Backup/src/objects/Asset_Move__c.object
<CustomObject>
    <description>Asset Move</description>
    <fields>
        <fullName>AccountNumber__c</fullName>
        <formula>Account__r.AccountNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AccountNumber</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Asset_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Actual_Placement_Date__c</fullName>
        <label>Actual Placement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <formula>Fridge_Depot__r.ShippingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset_Serial__c</fullName>
        <formula>Asset__r.Serial__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Asset Serial #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset_Sub_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset Sub Type</label>
        <referenceTo>Asset_Sub_Type__c</referenceTo>
        <relationshipName>Asset_Moves</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Asset_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset Type</label>
        <referenceTo>Asset_Type__c</referenceTo>
        <relationshipName>Asset_Moves</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset</label>
        <referenceTo>Asset__c</referenceTo>
        <relationshipLabel>Asset History</relationshipLabel>
        <relationshipName>Asset_Moves</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <formula>Fridge_Depot__r.ShippingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Asset_Moves</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Enter_Serial__c</fullName>
        <label>Enter Serial#</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Branding__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>External Branding</label>
        <referenceTo>Fridge_In_Fills__c</referenceTo>
        <relationshipName>Asset_Moves_External_Branding</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fridge_Depot__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This will be the &quot;State&quot; Designated Fridge Depot</description>
        <inlineHelpText>&quot;State&quot; Designated Fridge Depot</inlineHelpText>
        <label>Fridge Depot</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Asset Move (Fridge Depot)</relationshipLabel>
        <relationshipName>Fridge_Depot_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fridge_In_Fill__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fridge In Fill</label>
        <referenceTo>Fridge_In_Fills__c</referenceTo>
        <relationshipName>Asset_Moves</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Internal_Branding__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Internal Branding</label>
        <referenceTo>Fridge_In_Fills__c</referenceTo>
        <relationshipName>Asset_Moves_Internal_Branding</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Legacy_Code__c</fullName>
        <label>Legacy Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Model</label>
        <referenceTo>Asset_Models__c</referenceTo>
        <relationshipLabel>Asset Move</relationshipLabel>
        <relationshipName>Asset_Moves</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Move_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Move Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account for the Asset to moved to</description>
        <label>New Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Asset History</relationshipLabel>
        <relationshipName>Asset_Moves</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>New_Address__c</fullName>
        <formula>New_Account__r.ShippingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_City__c</fullName>
        <formula>New_Account__r.ShippingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_State__c</fullName>
        <formula>New_Account__r.ShippingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Venue_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookups up venue based on the account.</description>
        <label>New Venue Lookup</label>
        <referenceTo>Venue__c</referenceTo>
        <relationshipName>Asset_Moves</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>New_Venue_Name__c</fullName>
        <formula>New_Venue_Lookup__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Venue Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Venue__c</fullName>
        <label>New Venue</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Zip__c</fullName>
        <formula>New_Account__r.ShippingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Zip</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PFM_Asset_Tag__c</fullName>
        <label>PFM Asset Tag</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PFM_Comments__c</fullName>
        <description>Comments coming back from PFM in the interface</description>
        <label>PFM Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PFM_Serial_Number__c</fullName>
        <label>PFM Serial Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pick_Up_Date__c</fullName>
        <label>Pick Up Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Previous_Venue_Name__c</fullName>
        <formula>Previous_Venue__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Previous Venue Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Venue__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Previous Venue the asset was located. BFA</description>
        <label>Previous Venue</label>
        <referenceTo>Venue__c</referenceTo>
        <relationshipName>Asset_Moves1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <description>Reason for being fridge being picked up.</description>
        <label>Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Closing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cool Room</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Down Sizing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ROI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upgrading</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RecordTypeName__c</fullName>
        <formula>$RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RecordTypeName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>TEXT (New_Account__r.Region__c)</formula>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requested_Placement_Date__c</fullName>
        <defaultValue>today()+1</defaultValue>
        <label>Requested Placement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Serial_Lookup__c</fullName>
        <formula>Asset__r.Serial__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Serial Lookup</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <formula>Fridge_Depot__r.ShippingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Used for asset move workflow and interface.</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Process Move</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Error</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Terms_Conditions__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Sends an email to customer with BFA&apos;s Terms and Conditions</description>
        <inlineHelpText>Contact has agreed to the Placement Terms &amp; Conditions.</inlineHelpText>
        <label>Terms &amp; Conditions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type_Of_Placement__c</fullName>
        <label>Type Of Placement</label>
        <picklist>
            <picklistValues>
                <fullName>Permanent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Temporary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <formula>Fridge_Depot__r.ShippingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Zip</label>
        <type>Text</type>
    </fields>
    <label>Asset Move</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AM-{0}</displayFormat>
        <label>Asset Move</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Asset Move</pluralLabel>
    <recordTypes>
        <fullName>Found_Fridge</fullName>
        <active>true</active>
        <description>Capture fridge details in account subject to asset administrator approval.</description>
        <label>Found Fridge</label>
    </recordTypes>
    <recordTypes>
        <fullName>Found_Fridge_Locked</fullName>
        <active>true</active>
        <description>When a found fridge request is being processed, this will stop the request from being changed</description>
        <label>Found Fridge Locked</label>
    </recordTypes>
    <recordTypes>
        <fullName>Permanent_Delivery</fullName>
        <active>true</active>
        <description>From state fridge depot to account. Permanent Placement Of Asset</description>
        <label>Permanent Placement</label>
    </recordTypes>
    <recordTypes>
        <fullName>Permanent_Placement_Locked</fullName>
        <active>true</active>
        <description>This will lock the permanent placement request, while it is being processed.</description>
        <label>Permanent Placement Locked</label>
    </recordTypes>
    <recordTypes>
        <fullName>Pickup</fullName>
        <active>true</active>
        <description>From account to state fridge depot.</description>
        <label>Pickup</label>
    </recordTypes>
    <recordTypes>
        <fullName>Pickup_Locked</fullName>
        <active>true</active>
        <description>This will lock the pickup request, while it is being processed.</description>
        <label>Pickup Locked</label>
    </recordTypes>
    <recordTypes>
        <fullName>Temporary_Placement</fullName>
        <active>true</active>
        <description>From state fridge depot to account. Temporary Placement Of Asset - Must Include a Pick-up Date</description>
        <label>Temporary Placement</label>
    </recordTypes>
    <recordTypes>
        <fullName>Temporary_Placement_Locked</fullName>
        <active>true</active>
        <description>This will lock the temporary placement request, while it is being processed.</description>
        <label>Temporary Placement Locked</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>